test/data/semantic/bad/reserved_name_struct_pattern.coy
struct S(i64, i64);

fn main() -> () {
    let S(if, else) = S(1, 0);

    ()
}
